# whisper-gate

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: ralph-loop.local.md  settings.json
.claude/plans/: project-plan.md
configs/: full.yaml  prototype.yaml  prototype_constrained.yaml  silence_gate.yaml  silence_gate_v2.yaml  silence_gate_v3.yaml
paper/: main.tex
results/: phase1_baseline.json  phase1_hallucination.json
results/phase1_train_constrained/: results.json
results/silence_gate/: results.json
results/silence_gate_v2/: results.json
results/silence_gate_v4/: gap_hallucination.json  hard_gate_wer.json  results.json
scripts/: eval_attention_bias.py  eval_gap_hallucination.py  eval_hard_gate_wer.py  eval_silero_vad_baseline.py  eval_vanilla_small.py  eval_whisper_small.py  run_phase1_baseline.py  run_phase1_hallucination.py  run_phase1_train.py  run_silence_gate.py  run_silence_gate_v4.py  run_silence_gate_v5.py  runpod_setup.sh
src/pulse_whisper/: __init__.py
src/pulse_whisper/data/: __init__.py  dataset.py  gapped_audio.py
src/pulse_whisper/eval/: gapped_eval.py
src/pulse_whisper/models/: gated_whisper.py  pulse_module.py  pulse_whisper.py  silence_gate.py
src/pulse_whisper/training/: config.py  trainer.py
